--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,9 @@
 {
   "files.exclude": {
-    ".vercel": true
+    ".vercel": true,
+    "**/node_modules/**": true
   },
   "search.exclude": {
-    "develop": true,
-    "develop/index.html": true,
-    "public/index.html": true
+    "**/bundle.*": true
   }
 }
