--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@rollup/plugin-inject": "^4.0.2",
     "@rollup/plugin-node-resolve": "^11.0.1",
     "abrusco": "^0.14.0",
+    "postcss": "^8.2.8",
+    "postcss-import": "^14.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "uuid": "^8.3.2"
   },
